--- a/client/package.json
+++ b/client/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://shopping-cart-sable-nine.vercel.app/",
   "name": "shopping-cart-react-stripe",
   "version": "0.1.0",
   "private": true,
