--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,8 @@
 {
+  "version": 2,
   "builds": [
     {
-      "src": "./server.js",
+      "src": "./server/server.js",
       "use": "@vercel/node"
     },
     {
@@ -13,7 +14,7 @@
   "rewrites": [
     {
       "source": "/(.*)",
-      "destination": "/server.js"
+      "destination": "/server/server.js"
     }
   ]
 }
